--- a/代码/ChefAdia-master/ChefAdia/Base.lproj/Main.storyboard
+++ b/代码/ChefAdia-master/ChefAdia/Base.lproj/Main.storyboard
@@ -18,7 +18,7 @@
                     <extendedEdge key="edgesForExtendedLayout" top="YES"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics" translucent="NO"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="LmS-Iz-gRZ">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" translucent="NO" id="LmS-Iz-gRZ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -841,6 +841,10 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="285.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="bg_me-1" translatesAutoresizingMaskIntoConstraints="NO" id="HQT-gB-r73">
+                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="286"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </imageView>
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="jpp-bf-t2c">
                                                     <rect key="frame" x="137" y="62" width="100" height="161.5"/>
                                                     <subviews>
@@ -997,7 +1001,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6YB-SC-CjV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1504.8" y="1729.385307346327"/>
+            <point key="canvasLocation" x="1504.5" y="1728.5"/>
         </scene>
         <!--CASignUpViewController-->
         <scene sceneID="xSR-bw-nB3">
@@ -1892,9 +1896,10 @@
         <image name="Logo" width="222" height="180"/>
         <image name="Logo_Color" width="104" height="84"/>
         <image name="MINUS" width="76" height="76"/>
+        <image name="bg_me-1" width="375" height="334"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="7hE-Gd-Glp"/>
         <segue reference="vYE-hH-yYs"/>
+        <segue reference="7hE-Gd-Glp"/>
     </inferredMetricsTieBreakers>
 </document>
