--- a/代码/ChefAdia-master/ChefAdia/CAFoodTableViewCell.xib
+++ b/代码/ChefAdia-master/ChefAdia/CAFoodTableViewCell.xib
@@ -12,48 +12,46 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="CAFoodTableViewCell" rowHeight="250" id="KGk-i7-Jjw" userLabel="CAFoodTableViewCell" customClass="CAFoodTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="250"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="CAFoodTableViewCell" rowHeight="275" id="KGk-i7-Jjw" userLabel="CAFoodTableViewCell" customClass="CAFoodTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="139" height="120"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="249.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="139" height="119.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="redraw" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Ajv-T2-RIb">
-                        <rect key="frame" x="20" y="0.0" width="280" height="241.5"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="q3p-9p-U0z">
+                        <rect key="frame" x="0.0" y="0.0" width="139" height="119.5"/>
                     </imageView>
-                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="NbT-hx-KVN">
-                        <rect key="frame" x="125" y="102" width="70.5" height="46"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NAME" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m9r-A2-re9">
-                                <rect key="frame" x="0.0" y="0.0" width="70.5" height="20.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NUMBER" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B0m-DB-vLp">
-                                <rect key="frame" x="0.0" y="25.5" width="70.5" height="20.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                    </stackView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NAME" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m9r-A2-re9">
+                        <rect key="frame" x="45.5" y="49" width="47.5" height="20.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="NUMBER" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B0m-DB-vLp">
+                        <rect key="frame" x="34" y="138" width="70.5" height="20.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="Ajv-T2-RIb" secondAttribute="trailing" constant="20" id="1zC-Q3-WM7"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="Ajv-T2-RIb" secondAttribute="bottom" id="LPO-ZD-mhl"/>
-                    <constraint firstItem="NbT-hx-KVN" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="ZnH-bY-20b"/>
-                    <constraint firstItem="Ajv-T2-RIb" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="ewg-JG-l0l"/>
-                    <constraint firstItem="NbT-hx-KVN" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="lg1-ES-eyG"/>
-                    <constraint firstItem="Ajv-T2-RIb" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="zbJ-QO-Q2E"/>
+                    <constraint firstItem="q3p-9p-U0z" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="63l-bC-lkZ"/>
+                    <constraint firstItem="q3p-9p-U0z" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="9F5-JF-JyW"/>
+                    <constraint firstItem="B0m-DB-vLp" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="PuJ-u1-uB8"/>
+                    <constraint firstItem="m9r-A2-re9" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="SQH-GN-5Te"/>
+                    <constraint firstItem="m9r-A2-re9" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="WHR-PF-yun"/>
+                    <constraint firstAttribute="bottom" secondItem="q3p-9p-U0z" secondAttribute="bottom" id="bCd-dU-Sf2"/>
+                    <constraint firstItem="B0m-DB-vLp" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="130" id="cUk-4c-vnH"/>
+                    <constraint firstAttribute="trailing" secondItem="q3p-9p-U0z" secondAttribute="trailing" id="eZP-9Z-jl8"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
-                <outlet property="bgView" destination="Ajv-T2-RIb" id="JCf-Eh-Uuo"/>
+                <outlet property="BackImage" destination="q3p-9p-U0z" id="bDr-i2-9mM"/>
                 <outlet property="nameLabel" destination="m9r-A2-re9" id="gEX-kM-Z7a"/>
                 <outlet property="numberLabel" destination="B0m-DB-vLp" id="b5l-1o-9m0"/>
             </connections>
+            <point key="canvasLocation" x="-34.5" y="46"/>
         </tableViewCell>
     </objects>
 </document>
