--- a/代码/ChefAdia-master/ChefAdia/CAMeHistoryTableViewCell.xib
+++ b/代码/ChefAdia-master/ChefAdia/CAMeHistoryTableViewCell.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -16,23 +16,23 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="110"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="109"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="109.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="bottom" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Oa7-Nb-4M3">
                         <rect key="frame" x="10" y="10" width="300" height="90"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="8fQ-Ac-zQk">
-                                <rect key="frame" x="0.0" y="0.0" width="300" height="15"/>
+                                <rect key="frame" x="0.0" y="0.0" width="300" height="24.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Order ID" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gwm-pa-B70">
-                                        <rect key="frame" x="0.0" y="0.0" width="58" height="15"/>
+                                        <rect key="frame" x="0.0" y="3.5" width="58" height="18"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="IS CUST?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y1T-XW-jqO">
-                                        <rect key="frame" x="227.5" y="0.0" width="72.5" height="15"/>
+                                        <rect key="frame" x="227.5" y="2" width="72.5" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -40,47 +40,47 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Jqc-T0-vSS">
-                                <rect key="frame" x="0.0" y="25" width="300" height="30"/>
+                                <rect key="frame" x="0.0" y="34.5" width="300" height="20.5"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo_Color" translatesAutoresizingMaskIntoConstraints="NO" id="zcv-7M-WX2">
-                                        <rect key="frame" x="0.0" y="0.0" width="37" height="30"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" secondItem="zcv-7M-WX2" secondAttribute="height" multiplier="104:84" id="4lf-ao-3FP"/>
-                                            <constraint firstAttribute="height" constant="30" id="Mjf-e3-2sM"/>
-                                        </constraints>
-                                    </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TIME" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5mV-uq-Xpe">
-                                        <rect key="frame" x="47" y="0.0" width="39" height="30"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="PRICE" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="89c-A3-ROZ">
-                                        <rect key="frame" x="96" y="0.0" width="204" height="30"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="300" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
                             </stackView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hhp-jR-EpN">
-                                <rect key="frame" x="175" y="65" width="125" height="25"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="25" id="dku-Gy-XMd"/>
-                                    <constraint firstAttribute="width" secondItem="hhp-jR-EpN" secondAttribute="height" multiplier="5:1" id="hNK-7Z-NoU"/>
-                                </constraints>
-                                <state key="normal" title="EASY ORDER" backgroundImage="BUTTON_BG_DEFAULT_SHORT">
-                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                </state>
-                                <connections>
-                                    <action selector="easyorderAction:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="kJr-hA-h2d"/>
-                                </connections>
-                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="3Fn-gW-Mvb">
+                                <rect key="frame" x="0.0" y="65" width="300" height="25"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="PRICE" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="89c-A3-ROZ">
+                                        <rect key="frame" x="0.0" y="0.0" width="165" height="25"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" red="0.91145032640000001" green="0.28286737200000001" blue="0.33226233719999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hhp-jR-EpN">
+                                        <rect key="frame" x="175" y="0.0" width="125" height="25"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="25" id="dku-Gy-XMd"/>
+                                            <constraint firstAttribute="width" secondItem="hhp-jR-EpN" secondAttribute="height" multiplier="5:1" id="hNK-7Z-NoU"/>
+                                        </constraints>
+                                        <state key="normal" title="EASY ORDER" backgroundImage="button-gredient">
+                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="easyorderAction:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="kJr-hA-h2d"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="Jqc-T0-vSS" secondAttribute="trailing" id="6Lz-uc-ZhS"/>
                             <constraint firstAttribute="trailing" secondItem="8fQ-Ac-zQk" secondAttribute="trailing" id="Lsb-Dx-QoJ"/>
+                            <constraint firstAttribute="trailing" secondItem="3Fn-gW-Mvb" secondAttribute="trailing" id="jNs-Nb-TZ1"/>
                             <constraint firstItem="8fQ-Ac-zQk" firstAttribute="leading" secondItem="Oa7-Nb-4M3" secondAttribute="leading" id="jz6-jX-Dbj"/>
+                            <constraint firstItem="3Fn-gW-Mvb" firstAttribute="leading" secondItem="Oa7-Nb-4M3" secondAttribute="leading" id="koP-e6-Q7V"/>
                             <constraint firstItem="Jqc-T0-vSS" firstAttribute="leading" secondItem="Oa7-Nb-4M3" secondAttribute="leading" id="rqd-L3-Kqm"/>
                         </constraints>
                     </stackView>
@@ -104,7 +104,6 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="BUTTON_BG_DEFAULT_SHORT" width="500" height="100"/>
-        <image name="Logo_Color" width="104" height="84"/>
+        <image name="button-gredient" width="285" height="43"/>
     </resources>
 </document>
