--- a/代码/ChefAdia-master/ChefAdia/CAFoodTableViewCell.xib
+++ b/代码/ChefAdia-master/ChefAdia/CAFoodTableViewCell.xib
@@ -6,44 +6,52 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="CAFoodTableViewCell" rowHeight="275" id="KGk-i7-Jjw" userLabel="CAFoodTableViewCell" customClass="CAFoodTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="139" height="120"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="CAFoodTableViewCell" rowHeight="294" id="KGk-i7-Jjw" userLabel="CAFoodTableViewCell" customClass="CAFoodTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="299" height="139"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="139" height="119.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="299" height="138.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="q3p-9p-U0z">
-                        <rect key="frame" x="0.0" y="0.0" width="139" height="119.5"/>
+                        <rect key="frame" x="10" y="8" width="279" height="127"/>
+                        <constraints>
+                            <constraint firstAttribute="width" secondItem="q3p-9p-U0z" secondAttribute="height" multiplier="375:170" id="MGM-bC-6Pv"/>
+                        </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NAME" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m9r-A2-re9">
-                        <rect key="frame" x="45.5" y="49" width="47.5" height="20.5"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="NUMBER" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B0m-DB-vLp">
-                        <rect key="frame" x="34" y="138" width="70.5" height="20.5"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="kSH-5j-6dp">
+                        <rect key="frame" x="114.5" y="51" width="70.5" height="41"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NAME" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m9r-A2-re9">
+                                <rect key="frame" x="0.0" y="0.0" width="70.5" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="NUMBER" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B0m-DB-vLp">
+                                <rect key="frame" x="0.0" y="20.5" width="70.5" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                    </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="q3p-9p-U0z" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="63l-bC-lkZ"/>
-                    <constraint firstItem="q3p-9p-U0z" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="9F5-JF-JyW"/>
-                    <constraint firstItem="B0m-DB-vLp" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="PuJ-u1-uB8"/>
-                    <constraint firstItem="m9r-A2-re9" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="SQH-GN-5Te"/>
-                    <constraint firstItem="m9r-A2-re9" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="WHR-PF-yun"/>
-                    <constraint firstAttribute="bottom" secondItem="q3p-9p-U0z" secondAttribute="bottom" id="bCd-dU-Sf2"/>
-                    <constraint firstItem="B0m-DB-vLp" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="130" id="cUk-4c-vnH"/>
-                    <constraint firstAttribute="trailing" secondItem="q3p-9p-U0z" secondAttribute="trailing" id="eZP-9Z-jl8"/>
+                    <constraint firstItem="q3p-9p-U0z" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="1YR-uK-Idj"/>
+                    <constraint firstAttribute="trailing" secondItem="q3p-9p-U0z" secondAttribute="trailing" constant="10" id="9W3-Fx-pef"/>
+                    <constraint firstItem="kSH-5j-6dp" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="FgB-oP-QD1"/>
+                    <constraint firstItem="q3p-9p-U0z" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="fG6-lG-hHh"/>
+                    <constraint firstItem="q3p-9p-U0z" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="gwD-lg-0ye"/>
+                    <constraint firstItem="kSH-5j-6dp" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="nzo-mE-27g"/>
+                    <constraint firstItem="q3p-9p-U0z" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="xBD-Xj-ccu"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
@@ -51,7 +59,7 @@
                 <outlet property="nameLabel" destination="m9r-A2-re9" id="gEX-kM-Z7a"/>
                 <outlet property="numberLabel" destination="B0m-DB-vLp" id="b5l-1o-9m0"/>
             </connections>
-            <point key="canvasLocation" x="-34.5" y="46"/>
+            <point key="canvasLocation" x="45.5" y="55.5"/>
         </tableViewCell>
     </objects>
 </document>
